--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-pandas
+streamlit==1.30.0
+pandas==1.3.3
 PyPDF2
 openai
-<<<<<<< HEAD
 xlsxwriterpython-docx
 openai
-=======
 xlsxwriter
 python-docx
->>>>>>> a06ba87f1f10134ab3c57fb44e2961897e6278f9
+a06ba87f1f10134ab3c57fb44e2961897e6278f9
